--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "eslint-config-next": "13.4.3",
     "github-card-react": "^1.0.3",
     "next": "13.4.3",
+    "node-fetch": "^3.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1",
     "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.8",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
