--- a/package.json
+++ b/package.json
@@ -9,30 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "github-card-react": "^1.0.3",
-    "next": "13.4.3",
+    "next": "13.4.7",
     "node-fetch": "^3.3.1",
-    "postcss": "8.4.23",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "server-only": "^0.0.1",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1",
-    "tailwind-merge": "^1.13.1",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.8",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "server-only": "^0.0.1"
   }
 }
