--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "server-only": "^0.0.1"
